needed changes to javascript

--- a/Index.html
+++ b/Index.html
@@ -6,13 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./asset/normalize.css">
-    <link rel="stylesheet" href="./asset/normalize.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="./asset/Main.css">
+    <title>All I want for my bday is a big booty hoe</title>
 </head>
 
 <body>
-    <!-- View High Scores -->
-    <!-- timer -->
+    <div>
+        <!-- View High Scores -->
+        <div class="container">
+            <p id="timer">
+            <ul class="list"></ul>
+            </p>
+        </div>
+        <!-- timer -->
+        <div class="container">
+            <p id="timer">
+                <span id="timer-days"></span>
+                <span id="timer-hours"></span>
+                <span id="timer-mins"></span>
+                <span id="timer-secs"></span>
+            </p>
+        </div>
+
+    </div>
     <!-- questions -->
     <!-- answer list -->
 </body>
