--- a/Index.html
+++ b/Index.html
@@ -14,7 +14,7 @@
     <div>
         <!-- View High Scores -->
         <div class="container">
-            <p id="timer">
+            <p id="highscores">
             <ul class="list"></ul>
             </p>
         </div>
