added framework to javascript and html

--- a/Index.html
+++ b/Index.html
@@ -11,24 +11,14 @@
 </head>
 
 <body>
-    <div>
+    <header>
         <!-- View High Scores -->
-        <div class="container">
-            <p id="highscores">
-            <ul class="list"></ul>
-            </p>
-        </div>
+        <a href="highscores">View High Scores</a>
         <!-- timer -->
-        <div class="container">
-            <p id="timer">
-                <span id="timer-days"></span>
-                <span id="timer-hours"></span>
-                <span id="timer-mins"></span>
-                <span id="timer-secs"></span>
-            </p>
-        </div>
-
-    </div>
+        <div class="timer">Timed Coding Quiz:</div>
+    </header>
+    <p>Click the buttonw below to begin the quick challenge!</p>
+    <button id="startQuiz">START QUIZ</button>
     <!-- questions -->
     <!-- answer list -->
 </body>
