New changes to javascript

--- a/Index.html
+++ b/Index.html
@@ -17,9 +17,14 @@
         <!-- timer -->
         <div class="timer">Timed Coding Quiz:</div>
     </header>
-    <p>Click the buttonw below to begin the quick challenge!</p>
-    <button id="startQuiz">START QUIZ</button>
+    <p>Click the button below to begin the quick challenge!</p>
+    <button class="b-rad-4" id="startQuiz">START QUIZ</button>
     <!-- questions -->
+    <div class="b-rad-4" id="questions"></div>
+    <button data-answer="hi">hi</button>
+    <button data-answer="hi">how</button>
+    <button data-answer="hi">are</button>
+    <button data-answer="hi">you</button>
     <!-- answer list -->
 </body>
 <!--  Javascript link -->
