changes to javascript and css

--- a/Index.html
+++ b/Index.html
@@ -13,18 +13,18 @@
 <body>
     <header>
         <!-- View High Scores -->
-        <a href="highscores">View High Scores</a>
+        <a class="highscores" href="highscores" id="highscores">View High Scores</a>
         <!-- timer -->
         <div class="timer">Timed Coding Quiz:</div>
     </header>
     <p>Click the button below to begin the quick challenge!</p>
     <button class="b-rad-4" id="startQuiz">START QUIZ</button>
     <!-- questions -->
-    <div class="b-rad-4" id="questions"></div>
-    <button data-answer="hi">hi</button>
-    <button data-answer="hi">how</button>
-    <button data-answer="hi">are</button>
-    <button data-answer="hi">you</button>
+    <h2 class="b-rad-4" id="questions"></h2>
+    <button class="hidden" data-answer="hi">hi</button>
+    <button class="hidden" data-answer="hi">how</button>
+    <button class="hidden" data-answer="hi">are</button>
+    <button class="hidden" data-answer="hi">you</button>
     <!-- answer list -->
 </body>
 <!--  Javascript link -->
