new title for quiz

--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./asset/normalize.css">
     <link rel="stylesheet" href="./asset/Main.css">
-    <title>All I want for my bday is a big booty hoe</title>
+    <title>Coding Quiz</title>
 </head>
 
 <body>
